--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,9 @@ dependencies:
   meta: ^1.16.0
   video_player: ^2.10.0
   http: ^1.5.0
-  googleapis: ^14.0.0
-  googleapis_auth: ^2.0.0
   csv: ^6.0.0
   web: ^1.1.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
