--- a/firebase.json
+++ b/firebase.json
@@ -1,15 +1,22 @@
 {
   "hosting": {
     "public": "build/web",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "rewrites": [{"source": "**", "destination": "/index.html"}],
+    "headers": [
       {
-        "source": "**",
-        "destination": "/index.html"
+        "source": "/assets/**",
+        "headers": [
+          {"key": "Cross-Origin-Resource-Policy", "value": "cross-origin"},
+          {"key": "Cache-Control", "value": "max-age=31536000"}
+        ]
+      },
+      {
+        "source": "**/*.@(mp4|webm|ogg)",
+        "headers": [
+          {"key": "Cross-Origin-Resource-Policy", "value": "cross-origin"},
+          {"key": "Content-Type", "value": "video/mp4"}
+        ]
       }
     ]
   }
